# klein-bottle-viz

./: .gitignore  CMakeLists.txt  README.md
include/: DemoScene.h  FontRenderer.h  KleinMath.h  KleinMesh.h  Overlay.h  Renderer.h  Stats.h
src/: DemoScene.cpp  FontRenderer.cpp  KleinMath.cpp  KleinMesh.cpp  Overlay.cpp  Renderer.cpp  Stats.cpp  main.cpp
